# unifi-protect-bridge

./: .env.example  .gitignore  AGENTS.md  AI_CONTEXT.md  CLAUDE.md  GEMINI.md  OPENCODE.md  README.md  hacs.json  pyproject.toml
.github/workflows/: ci.yml
blueprints/automation/ha_protect_bridge/: react_to_detection.yaml
blueprints/automation/unifi_protect_bridge/: react_to_detection.yaml
custom_components/ha_protect_bridge/: __init__.py  automation_payloads.py  catalog.py  config_flow.py  const.py  entry_runtime.py  manifest.json  normalize.py  protect_api.py  runtime.py  sensor.py  services.yaml  setup_info.py  webhook.py
custom_components/ha_protect_bridge/translations/: en.json
custom_components/unifi_protect_bridge/: __init__.py  automation_plan.py  catalog.py  config_flow.py  const.py  manifest.json  normalize.py  protect_api.py  runtime.py  sensor.py  setup_info.py  webhook.py
custom_components/unifi_protect_bridge/translations/: en.json
docs/: apis-and-scope.md  architecture.md  ha-protect-bridge.md  legal-and-publishing.md  project-split.md  roadmap.md
src/sitebridge/: cli.py  config.py
src/unifi_protect_bridge/: cli.py  cli_helpers.py  config.py  detections.py
tests/: conftest.py  test_automation_payloads.py  test_automation_plan.py  test_catalog.py  test_cli.py  test_config_flow.py  test_diagnostics.py  test_entry_runtime.py  test_ha_protect_normalize.py  test_init.py  test_options_flow.py  test_protect_api.py  test_runtime.py  test_sensor.py  test_setup_info.py  test_unifi_protect_normalize.py
