[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unifi-protect-bridge"
version = "0.2.11"
description = "Home Assistant HACS integration for automatic UniFi Protect webhook provisioning and sensors."
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "httpx>=0.28,<0.29",
    "python-dotenv>=1.1,<2",
    "typer-slim>=0.24,<0.25",
]

[project.optional-dependencies]
dev = [
    "aiohttp>=3.12,<4",
    "pytest>=8.4,<9",
    "ruff>=0.12,<0.13",
    "voluptuous>=0.15,<0.16",
]

[project.scripts]
unifi-protect-bridge = "unifi_protect_bridge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/unifi_protect_bridge"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
