[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unifi-protect-bridge"
version = "0.2.20"
description = "Home Assistant HACS integration for automatic UniFi Protect webhook provisioning and sensors."
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "aiohttp>=3.12,<4",
    "voluptuous>=0.15,<0.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4,<9",
    "ruff>=0.12,<0.13",
]

[tool.hatch.build.targets.wheel]
only-include = ["custom_components/unifi_protect_bridge"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
